<resources>
    <string name="app_name">JFBR, JEPJ, LAGG</string>
    <string name="button_jugada">Iniciar el Juego</string>
    <string name="button_lanzar">LANZAR DADO</string>
    <string name="nombre_jugador1">Jugador 1</string>
    <string name="nombre_jugador2">Jugador 2</string>
    <string name="cantidad_fichas">Seleccione la cantidad de Fichas:</string>
    <string name="mensaje_nombres">Ingrese el nombre de los Jugadores: </string>
    <string name="mensaje_ganaste">ERES EL GANADOR!!!!!!!</string>
    <string name="mensaje_error">Debe llenar los campos de los jugadores</string>
    <string name="numero_fichas">No. Fichas:</string>
</resources>
